--- a/src/bin_client/tezos-client.opam
+++ b/src/bin_client/tezos-client.opam
@@ -23,6 +23,7 @@ depends: [
   "tezos-client-005-PsBabyM1"
   "tezos-client-006-PsCARTHA"
   "tezos-client-007-PsDELPH1"
+  "tezos-client-008-PtEdoTez"
   "tezos-client-demo-counter"
 
   "tezos-client-alpha-commands"
@@ -33,10 +34,12 @@ depends: [
   "tezos-client-005-PsBabyM1-commands"
   "tezos-client-006-PsCARTHA-commands"
   "tezos-client-007-PsDELPH1-commands-registration"
+  "tezos-client-008-PtEdoTez-commands-registration"
 
   "tezos-baking-alpha-commands"
   "tezos-baking-006-PsCARTHA-commands"
   "tezos-baking-007-PsDELPH1-commands"
+  "tezos-baking-008-PtEdoTez-commands"
 
   "tezos-client-base-unix"
   "tezos-mockup-commands"
