--- a/src/lib_mockup/dune
+++ b/src/lib_mockup/dune
@@ -12,7 +12,7 @@
 (library
  (name tezos_mockup)
  (public_name tezos-mockup)
- (modules files local_services persistence RPC_client)
+ (modules files local_services persistence RPC_client migration)
  (libraries
    tezos-base
    tezos-client-base
