Tests/Python: Remove multibranch tests for 007
Cannot have two test modules with the same name, so I'm removing
the old one.

--- a/tests_python/Makefile
+++ b/tests_python/Makefile
@@ -1,7 +1,7 @@
 TYPECHECK=poetry run mypy
 LINT=poetry run pylint
 LINT2=poetry run pycodestyle
-PACKAGES=daemons launchers client tools scripts tests_007 tests_alpha examples tests_007/multibranch codec
+PACKAGES=daemons launchers client tools scripts tests_007 tests_alpha tests_alpha/multibranch examples codec
 LOG_DIR=tmp
 
 install-dependencies:
