--- a/.gitlab/ci/integration.yml
+++ b/.gitlab/ci/integration.yml
@@ -313,6 +313,234 @@ integration:007_voting_full:
     - poetry run pytest tests_007/test_voting_full.py -s --log-dir=tmp
   stage: test
 
+integration:008_baker_endorser:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_baker_endorser.py -s --log-dir=tmp
+  stage: test
+
+integration:008_basic:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_basic.py -s --log-dir=tmp
+  stage: test
+
+integration:008_bootstrap:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_bootstrap.py -s --log-dir=tmp
+  stage: test
+
+integration:008_client_without_node:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_client_without_node.py -s --log-dir=tmp
+  stage: test
+
+integration:008_codec:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_codec.py -s --log-dir=tmp
+  stage: test
+
+integration:008_contract:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_contract.py -s --log-dir=tmp
+  stage: test
+
+integration:008_contract_annotations:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_contract_annotations.py -s --log-dir=tmp
+  stage: test
+
+integration:008_contract_baker:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_contract_baker.py -s --log-dir=tmp
+  stage: test
+
+integration:008_contract_bls12_381:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_contract_bls12_381.py -s --log-dir=tmp
+  stage: test
+
+integration:008_contract_macros:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_contract_macros.py -s --log-dir=tmp
+  stage: test
+
+integration:008_contract_onchain_opcodes:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_contract_onchain_opcodes.py -s --log-dir=tmp
+  stage: test
+
+integration:008_contract_opcodes:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_contract_opcodes.py -s --log-dir=tmp
+  stage: test
+
+integration:008_cors:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_cors.py -s --log-dir=tmp
+  stage: test
+
+integration:008_crypto:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_crypto.py -s --log-dir=tmp
+  stage: test
+
+integration:008_deprecated_rpc:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_deprecated_rpc.py -s --log-dir=tmp
+  stage: test
+
+integration:008_double_endorsement:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_double_endorsement.py -s --log-dir=tmp
+  stage: test
+
+integration:008_forge_block:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_forge_block.py -s --log-dir=tmp
+  stage: test
+
+integration:008_fork:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_fork.py -s --log-dir=tmp
+  stage: test
+
+integration:008_injection:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_injection.py -s --log-dir=tmp
+  stage: test
+
+integration:008_many_bakers:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_many_bakers.py -s --log-dir=tmp
+  stage: test
+
+integration:008_many_nodes:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_many_nodes.py -s --log-dir=tmp
+  stage: test
+
+integration:008_mempool:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_mempool.py -s --log-dir=tmp
+  stage: test
+
+integration:008_migration:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_migration.py -s --log-dir=tmp
+  stage: test
+
+integration:008_mockup:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_mockup.py -s --log-dir=tmp
+  stage: test
+
+integration:008_multinode:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_multinode.py -s --log-dir=tmp
+  stage: test
+
+integration:008_multinode_snapshot:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_multinode_snapshot.py -s --log-dir=tmp
+  stage: test
+
+integration:008_multinode_storage_reconstruction:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_multinode_storage_reconstruction.py -s --log-dir=tmp
+  stage: test
+
+integration:008_multisig:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_multisig.py -s --log-dir=tmp
+  stage: test
+
+integration:008_openapi:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_openapi.py -s --log-dir=tmp
+  stage: test
+
+integration:008_p2p:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_p2p.py -s --log-dir=tmp
+  stage: test
+
+integration:008_programs:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_programs.py -s --log-dir=tmp
+  stage: test
+
+integration:008_proto_demo_counter:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_proto_demo_counter.py -s --log-dir=tmp
+  stage: test
+
+integration:008_proto_demo_noops_manual_bake:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_proto_demo_noops_manual_bake.py -s --log-dir=tmp
+  stage: test
+
+integration:008_rpc:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_rpc.py -s --log-dir=tmp
+  stage: test
+
+integration:008_sapling:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_sapling.py -s --log-dir=tmp
+  stage: test
+
+integration:008_tls:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_tls.py -s --log-dir=tmp
+  stage: test
+
+integration:008_voting:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_voting.py -s --log-dir=tmp
+  stage: test
+
+integration:008_voting_full:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_008/test_voting_full.py -s --log-dir=tmp
+  stage: test
+
 integration:alpha_baker_endorser:
   extends: .integration_python_template
   script:
