--- a/.gitlab/ci/integration.yml
+++ b/.gitlab/ci/integration.yml
@@ -109,34 +109,22 @@ integration:sandboxes:daemons-upgrade:
 
 # this section is updated using the script scripts/update_integration_test.sh
 ##BEGIN_INTEGRATION_PYTHON##
+integration:007_fast:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_007 -k "not slow" -s --log-dir=tmp
+  stage: test
+
 integration:007_baker_endorser:
   extends: .integration_python_template
   script:
     - poetry run pytest tests_007/test_baker_endorser.py -s --log-dir=tmp
   stage: test
 
-integration:007_basic:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_basic.py -s --log-dir=tmp
-  stage: test
-
 integration:007_bootstrap:
   extends: .integration_python_template
   script:
     - poetry run pytest tests_007/test_bootstrap.py -s --log-dir=tmp
-  stage: test
-
-integration:007_client_without_node:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_client_without_node.py -s --log-dir=tmp
-  stage: test
-
-integration:007_codec:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_codec.py -s --log-dir=tmp
   stage: test
 
 integration:007_contract:
@@ -149,18 +137,6 @@ integration:007_contract_annotations:
   extends: .integration_python_template
   script:
     - poetry run pytest tests_007/test_contract_annotations.py -s --log-dir=tmp
-  stage: test
-
-integration:007_contract_baker:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_contract_baker.py -s --log-dir=tmp
-  stage: test
-
-integration:007_contract_legacy:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_contract_legacy.py -s --log-dir=tmp
   stage: test
 
 integration:007_contract_macros:
@@ -181,34 +157,10 @@ integration:007_contract_opcodes:
     - poetry run pytest tests_007/test_contract_opcodes.py -s --log-dir=tmp
   stage: test
 
-integration:007_cors:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_cors.py -s --log-dir=tmp
-  stage: test
-
-integration:007_double_endorsement:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_double_endorsement.py -s --log-dir=tmp
-  stage: test
-
 integration:007_forge_block:
   extends: .integration_python_template
   script:
     - poetry run pytest tests_007/test_forge_block.py -s --log-dir=tmp
-  stage: test
-
-integration:007_fork:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_fork.py -s --log-dir=tmp
-  stage: test
-
-integration:007_injection:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_injection.py -s --log-dir=tmp
   stage: test
 
 integration:007_many_bakers:
@@ -229,18 +181,6 @@ integration:007_mempool:
     - poetry run pytest tests_007/test_mempool.py -s --log-dir=tmp
   stage: test
 
-integration:007_mockup:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_mockup.py -s --log-dir=tmp
-  stage: test
-
-integration:007_multinode:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_multinode.py -s --log-dir=tmp
-  stage: test
-
 integration:007_multinode_snapshot:
   extends: .integration_python_template
   script:
@@ -253,58 +193,16 @@ integration:007_multinode_storage_reconstruction:
     - poetry run pytest tests_007/test_multinode_storage_reconstruction.py -s --log-dir=tmp
   stage: test
 
-integration:007_multisig:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_multisig.py -s --log-dir=tmp
-  stage: test
-
-integration:007_openapi:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_openapi.py -s --log-dir=tmp
-  stage: test
-
-integration:007_p2p:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_p2p.py -s --log-dir=tmp
-  stage: test
-
-integration:007_programs:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_programs.py -s --log-dir=tmp
-  stage: test
-
-integration:007_proto_demo_counter:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_proto_demo_counter.py -s --log-dir=tmp
-  stage: test
-
-integration:007_proto_demo_noops_manual_bake:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_proto_demo_noops_manual_bake.py -s --log-dir=tmp
-  stage: test
-
 integration:007_rpc:
   extends: .integration_python_template
   script:
     - poetry run pytest tests_007/test_rpc.py -s --log-dir=tmp
   stage: test
 
-integration:007_tls:
+integration:008_fast:
   extends: .integration_python_template
   script:
-    - poetry run pytest tests_007/test_tls.py -s --log-dir=tmp
-  stage: test
-
-integration:007_voting:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_007/test_voting.py -s --log-dir=tmp
+    - poetry run pytest tests_008 -k "not slow" -s --log-dir=tmp
   stage: test
 
 integration:008_baker_endorser:
@@ -313,28 +211,10 @@ integration:008_baker_endorser:
     - poetry run pytest tests_008/test_baker_endorser.py -s --log-dir=tmp
   stage: test
 
-integration:008_basic:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_basic.py -s --log-dir=tmp
-  stage: test
-
 integration:008_bootstrap:
   extends: .integration_python_template
   script:
     - poetry run pytest tests_008/test_bootstrap.py -s --log-dir=tmp
-  stage: test
-
-integration:008_client_without_node:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_client_without_node.py -s --log-dir=tmp
-  stage: test
-
-integration:008_codec:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_codec.py -s --log-dir=tmp
   stage: test
 
 integration:008_contract:
@@ -347,18 +227,6 @@ integration:008_contract_annotations:
   extends: .integration_python_template
   script:
     - poetry run pytest tests_008/test_contract_annotations.py -s --log-dir=tmp
-  stage: test
-
-integration:008_contract_baker:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_contract_baker.py -s --log-dir=tmp
-  stage: test
-
-integration:008_contract_bls12_381:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_contract_bls12_381.py -s --log-dir=tmp
   stage: test
 
 integration:008_contract_macros:
@@ -379,46 +247,10 @@ integration:008_contract_opcodes:
     - poetry run pytest tests_008/test_contract_opcodes.py -s --log-dir=tmp
   stage: test
 
-integration:008_cors:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_cors.py -s --log-dir=tmp
-  stage: test
-
-integration:008_crypto:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_crypto.py -s --log-dir=tmp
-  stage: test
-
-integration:008_deprecated_rpc:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_deprecated_rpc.py -s --log-dir=tmp
-  stage: test
-
-integration:008_double_endorsement:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_double_endorsement.py -s --log-dir=tmp
-  stage: test
-
 integration:008_forge_block:
   extends: .integration_python_template
   script:
     - poetry run pytest tests_008/test_forge_block.py -s --log-dir=tmp
-  stage: test
-
-integration:008_fork:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_fork.py -s --log-dir=tmp
-  stage: test
-
-integration:008_injection:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_injection.py -s --log-dir=tmp
   stage: test
 
 integration:008_many_bakers:
@@ -439,24 +271,6 @@ integration:008_mempool:
     - poetry run pytest tests_008/test_mempool.py -s --log-dir=tmp
   stage: test
 
-integration:008_migration:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_migration.py -s --log-dir=tmp
-  stage: test
-
-integration:008_mockup:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_mockup.py -s --log-dir=tmp
-  stage: test
-
-integration:008_multinode:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_multinode.py -s --log-dir=tmp
-  stage: test
-
 integration:008_multinode_snapshot:
   extends: .integration_python_template
   script:
@@ -469,64 +283,10 @@ integration:008_multinode_storage_reconstruction:
     - poetry run pytest tests_008/test_multinode_storage_reconstruction.py -s --log-dir=tmp
   stage: test
 
-integration:008_multisig:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_multisig.py -s --log-dir=tmp
-  stage: test
-
-integration:008_openapi:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_openapi.py -s --log-dir=tmp
-  stage: test
-
-integration:008_p2p:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_p2p.py -s --log-dir=tmp
-  stage: test
-
-integration:008_programs:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_programs.py -s --log-dir=tmp
-  stage: test
-
-integration:008_proto_demo_counter:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_proto_demo_counter.py -s --log-dir=tmp
-  stage: test
-
-integration:008_proto_demo_noops_manual_bake:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_proto_demo_noops_manual_bake.py -s --log-dir=tmp
-  stage: test
-
 integration:008_rpc:
   extends: .integration_python_template
   script:
     - poetry run pytest tests_008/test_rpc.py -s --log-dir=tmp
-  stage: test
-
-integration:008_sapling:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_sapling.py -s --log-dir=tmp
-  stage: test
-
-integration:008_tls:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_tls.py -s --log-dir=tmp
-  stage: test
-
-integration:008_voting:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_008/test_voting.py -s --log-dir=tmp
   stage: test
 
 integration:008_voting_full:
@@ -535,34 +295,22 @@ integration:008_voting_full:
     - poetry run pytest tests_008/test_voting_full.py -s --log-dir=tmp
   stage: test
 
+integration:alpha_fast:
+  extends: .integration_python_template
+  script:
+    - poetry run pytest tests_alpha -k "not slow" -s --log-dir=tmp
+  stage: test
+
 integration:alpha_baker_endorser:
   extends: .integration_python_template
   script:
     - poetry run pytest tests_alpha/test_baker_endorser.py -s --log-dir=tmp
   stage: test
 
-integration:alpha_basic:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_basic.py -s --log-dir=tmp
-  stage: test
-
 integration:alpha_bootstrap:
   extends: .integration_python_template
   script:
     - poetry run pytest tests_alpha/test_bootstrap.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_client_without_node:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_client_without_node.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_codec:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_codec.py -s --log-dir=tmp
   stage: test
 
 integration:alpha_contract:
@@ -575,18 +323,6 @@ integration:alpha_contract_annotations:
   extends: .integration_python_template
   script:
     - poetry run pytest tests_alpha/test_contract_annotations.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_contract_baker:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_contract_baker.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_contract_bls12_381:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_contract_bls12_381.py -s --log-dir=tmp
   stage: test
 
 integration:alpha_contract_macros:
@@ -607,46 +343,10 @@ integration:alpha_contract_opcodes:
     - poetry run pytest tests_alpha/test_contract_opcodes.py -s --log-dir=tmp
   stage: test
 
-integration:alpha_cors:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_cors.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_crypto:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_crypto.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_deprecated_rpc:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_deprecated_rpc.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_double_endorsement:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_double_endorsement.py -s --log-dir=tmp
-  stage: test
-
 integration:alpha_forge_block:
   extends: .integration_python_template
   script:
     - poetry run pytest tests_alpha/test_forge_block.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_fork:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_fork.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_injection:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_injection.py -s --log-dir=tmp
   stage: test
 
 integration:alpha_many_bakers:
@@ -667,24 +367,6 @@ integration:alpha_mempool:
     - poetry run pytest tests_alpha/test_mempool.py -s --log-dir=tmp
   stage: test
 
-integration:alpha_migration:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_migration.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_mockup:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_mockup.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_multinode:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_multinode.py -s --log-dir=tmp
-  stage: test
-
 integration:alpha_multinode_snapshot:
   extends: .integration_python_template
   script:
@@ -697,64 +379,10 @@ integration:alpha_multinode_storage_reconstruction:
     - poetry run pytest tests_alpha/test_multinode_storage_reconstruction.py -s --log-dir=tmp
   stage: test
 
-integration:alpha_multisig:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_multisig.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_openapi:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_openapi.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_p2p:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_p2p.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_programs:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_programs.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_proto_demo_counter:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_proto_demo_counter.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_proto_demo_noops_manual_bake:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_proto_demo_noops_manual_bake.py -s --log-dir=tmp
-  stage: test
-
 integration:alpha_rpc:
   extends: .integration_python_template
   script:
     - poetry run pytest tests_alpha/test_rpc.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_sapling:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_sapling.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_tls:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_tls.py -s --log-dir=tmp
-  stage: test
-
-integration:alpha_voting:
-  extends: .integration_python_template
-  script:
-    - poetry run pytest tests_alpha/test_voting.py -s --log-dir=tmp
   stage: test
 
 integration:alpha_voting_full:
@@ -763,21 +391,11 @@ integration:alpha_voting_full:
     - poetry run pytest tests_alpha/test_voting_full.py -s --log-dir=tmp
   stage: test
 
-integration:examples_forge_transfer:
+integration:examples:
   extends: .integration_python_template
   script:
     - PYTHONPATH=$PYTHONPATH:./ poetry run python examples/forge_transfer.py
-  stage: test
-
-integration:examples_example:
-  extends: .integration_python_template
-  script:
     - PYTHONPATH=$PYTHONPATH:./ poetry run python examples/example.py
-  stage: test
-
-integration:examples_test_example:
-  extends: .integration_python_template
-  script:
     - PYTHONPATH=./ poetry run pytest examples/test_example.py
   stage: test
 ##END_INTEGRATION_PYTHON##
