--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@
 include:
   - .gitlab/ci/sanity.yml
   - .gitlab/ci/build.yml
+  - .gitlab/ci/sanity_ci.yml
   - .gitlab/ci/unittest.yml
   - .gitlab/ci/integration.yml
   - .gitlab/ci/coq.yml
@@ -25,6 +26,7 @@ variables:
 stages:
   - sanity
   - build
+  - sanity_ci
   - test
   - doc
   - packaging
