--- a/src/lib_protocol_environment/structs/dune
+++ b/src/lib_protocol_environment/structs/dune
@@ -6,5 +6,6 @@
  (public_name tezos-protocol-environment-structs)
  (flags :standard)
  (libraries tezos-stdlib
-            tezos-crypto)
+            tezos-crypto
+            tezos-lwt-result-stdlib)
  (modules ("V0") ("V1")))
