--- a/src/proto_alpha/lib_delegate/tezos-baking-alpha.opam
+++ b/src/proto_alpha/lib_delegate/tezos-baking-alpha.opam
@@ -18,6 +18,7 @@ depends: [
   "tezos-client-commands"
   "tezos-client-alpha"
   "lwt-canceler" { = "0.2" }
+  "lwt-exit"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
