--- a/src/lib_client_base_unix/dune
+++ b/src/lib_client_base_unix/dune
@@ -11,7 +11,8 @@
             tezos-mockup-commands
             tezos-proxy
             tezos-signer-backends.unix
-            tezos-shell-services)
+            tezos-shell-services
+            lwt-exit)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_rpc_http
                    -open Tezos_rpc_http_client_unix
