--- a/src/proto_007_PsDELPH1/lib_delegate/tezos-baking-007-PsDELPH1.opam
+++ b/src/proto_007_PsDELPH1/lib_delegate/tezos-baking-007-PsDELPH1.opam
@@ -18,6 +18,7 @@ depends: [
   "tezos-client-commands"
   "tezos-client-007-PsDELPH1"
   "lwt-canceler" { = "0.2" }
+  "lwt-exit"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
