--- a/src/proto_008_PtEdoTez/lib_delegate/tezos-baking-008-PtEdoTez.opam
+++ b/src/proto_008_PtEdoTez/lib_delegate/tezos-baking-008-PtEdoTez.opam
@@ -18,6 +18,7 @@ depends: [
   "tezos-client-commands"
   "tezos-client-008-PtEdoTez"
   "lwt-canceler" { = "0.2" }
+  "lwt-exit"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
