--- a/src/lib_clic/tezos-clic.opam
+++ b/src/lib_clic/tezos-clic.opam
@@ -13,6 +13,7 @@ depends: [
   "tezos-stdlib-unix"
   "tezos-error-monad"
   "tezos-lwt-result-stdlib"
+  "alcotest-lwt" { with-test & >= "1.1.0" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
