--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,8 @@
 ---
 
+include:
+  - .gitlab/ci/sanity.yml
+
 variables:
   ## Please update `scripts/version.sh` accordingly
   build_deps_image_version: 1c3ec32efb14e5fdba46ff887732bf6598a7f917
@@ -27,25 +30,6 @@ stages:
 
 sanity:
   image: ${build_deps_image_name}:runtime-build-test-dependencies--${build_deps_image_version}
-  stage: sanity
-  except:
-    - tags@tezos/tezos
-    - /-release$/@tezos/tezos
-  before_script:
-    - . ./scripts/version.sh
-  script:
-    - if [ "${build_deps_image_version}" != "${opam_repository_tag}" ] ; then
-        echo "Inconsistent dependencies hash between 'scripts/version.sh' and '.gitlab-ci.yml'." ;
-        echo "${build_deps_image_version} != ${opam_repository_tag}" ;
-        exit 1 ;
-      fi
-    - scripts/check_opam_test.sh
-    - src/tooling/lint.sh --check-gitlab-ci-yml
-    # Ensures that the local poetry.lock and pyproject.toml are synchronized
-    # with those of the base image.
-    - diff tests_python/poetry.lock /home/tezos/poetry.lock
-    - diff tests_python/pyproject.toml /home/tezos/pyproject.toml
-  interruptible: true
 
 ############################################################
 ## Stage: build (only MR)                                 ##
