--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ include:
   - .gitlab/ci/build.yml
   - .gitlab/ci/unittest.yml
   - .gitlab/ci/integration.yml
+  - .gitlab/ci/coq.yml
 
 variables:
   ## Please update `scripts/version.sh` accordingly
@@ -48,21 +49,6 @@ sanity:
 test-script-gen-genesis:
   image: ${build_deps_image_name}:runtime-build-test-dependencies--${build_deps_image_version}
 
-
-############################################################
-## Stage: conversion to Coq                               ##
-############################################################
-
-coq:lint:
-  extends: .test_template
-  script:
-    - make
-    - cd src/proto_alpha/lib_protocol
-    - for source in *.{ml,mli} ; do
-        coq-of-ocaml -config coq-of-ocaml/config.json $source ;
-      done
-  allow_failure: true
-  retry: 0
 
 ############################################################
 ## Stage: run tests written using Tezt                    ##
