ci: move coverage and publish target in a separate file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,8 @@ include:
   - .gitlab/ci/tezt.yml
   - .gitlab/ci/doc.yml
   - .gitlab/ci/opam.yml
+  - .gitlab/ci/publish.yml
+  - .gitlab/ci/coverage.yml
 
 variables:
   ## Please update `scripts/version.sh` accordingly
@@ -72,205 +74,5 @@ documentation:linkcheck:
 ## Stage: publish                                         ##
 ############################################################
 
-.publish_template:
-  image: docker:latest
-  services:
-    - docker:dind
-  variables:
-    DOCKER_DRIVER: overlay2
-    IMAGE_ARCH_PREFIX: ""
-  stage: publish
-  only:
-    - master@tezos/tezos
-    - tags@tezos/tezos
-    - /-release$/@tezos/tezos
-  before_script:
-    - mkdir ~/.docker || true
-    - echo "{ \"auths\":{ \"https://index.docker.io/v1/\":{ \"auth\":\"${CI_DOCKER_AUTH}\" } } }" > ~/.docker/config.json
-  script:
-    - ./scripts/create_docker_image.sh
-        "${public_docker_image_name}"
-        "${IMAGE_ARCH_PREFIX}${CI_COMMIT_REF_NAME}"
-        "${build_deps_image_name}"
-        "${build_deps_image_version}"
-        "${CI_COMMIT_SHORT_SHA}"
-    - docker push "${public_docker_image_name}:${IMAGE_ARCH_PREFIX}${CI_COMMIT_REF_NAME}"
-    - docker push "${public_docker_image_name}-bare:${IMAGE_ARCH_PREFIX}${CI_COMMIT_REF_NAME}"
-    - docker push "${public_docker_image_name}-debug:${IMAGE_ARCH_PREFIX}${CI_COMMIT_REF_NAME}"
-  interruptible: false
-
-publish:docker_amd64:
-  extends: .publish_template
-  variables:
-    DOCKER_DRIVER: overlay2
-    IMAGE_ARCH_PREFIX: "amd64-"
-  tags:
-    - safe_docker
-
-publish:docker_arm64:
-  extends: .publish_template
-  variables:
-    DOCKER_DRIVER: overlay2
-    IMAGE_ARCH_PREFIX: "arm64-"
-  tags:
-    - arm64
-
-merge-manifest:
-  image: docker:latest
-  services:
-    - name: "docker:dind"
-      command: ["--experimental"]
-  variables:
-    DOCKER_DRIVER: overlay2
-  stage: publish_manifest
-  only:
-    - master@tezos/tezos
-    - tags@tezos/tezos
-    - /-release$/@tezos/tezos
-  before_script:
-    - apk add git binutils
-    - mkdir ~/.docker || true
-    - echo "{ \"experimental\":\"enabled\", \"auths\":{ \"https://index.docker.io/v1/\":{ \"auth\":\"${CI_DOCKER_AUTH}\" } } }" > ~/.docker/config.json
-  script:
-    - LAST_COMMIT_DATE_TIME=$(git log --pretty=format:"%cd" -1 --date="format:%Y%m%d%H%M%S" 2>&1)
-    - docker manifest create "${public_docker_image_name}-bare:${CI_COMMIT_REF_NAME}"
-      --amend "${public_docker_image_name}-bare:amd64-${CI_COMMIT_REF_NAME}"
-      --amend "${public_docker_image_name}-bare:arm64-${CI_COMMIT_REF_NAME}"
-    - docker manifest push "${public_docker_image_name}-bare:${CI_COMMIT_REF_NAME}"
-    - docker manifest create "${public_docker_image_name}-bare:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
-      --amend "${public_docker_image_name}-bare:amd64-${CI_COMMIT_REF_NAME}"
-      --amend "${public_docker_image_name}-bare:arm64-${CI_COMMIT_REF_NAME}"
-    - docker manifest push "${public_docker_image_name}-bare:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
-    - docker manifest create "${public_docker_image_name}-debug:${CI_COMMIT_REF_NAME}"
-      --amend "${public_docker_image_name}-debug:amd64-${CI_COMMIT_REF_NAME}"
-      --amend "${public_docker_image_name}-debug:arm64-${CI_COMMIT_REF_NAME}"
-    - docker manifest push "${public_docker_image_name}-debug:${CI_COMMIT_REF_NAME}"
-    - docker manifest create "${public_docker_image_name}-debug:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
-      --amend "${public_docker_image_name}-debug:amd64-${CI_COMMIT_REF_NAME}"
-      --amend "${public_docker_image_name}-debug:arm64-${CI_COMMIT_REF_NAME}"
-    - docker manifest push "${public_docker_image_name}-debug:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
-    - docker manifest create "${public_docker_image_name}:${CI_COMMIT_REF_NAME}"
-      --amend "${public_docker_image_name}:amd64-${CI_COMMIT_REF_NAME}"
-      --amend "${public_docker_image_name}:arm64-${CI_COMMIT_REF_NAME}"
-    - docker manifest push "${public_docker_image_name}:${CI_COMMIT_REF_NAME}"
-    - docker manifest create "${public_docker_image_name}:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
-      --amend "${public_docker_image_name}:amd64-${CI_COMMIT_REF_NAME}"
-      --amend "${public_docker_image_name}:arm64-${CI_COMMIT_REF_NAME}"
-    - docker manifest push "${public_docker_image_name}:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
-  interruptible: false
-
 publish:doc:
   image: ${build_deps_image_name}:runtime-build-test-dependencies--${build_deps_image_version}
-  stage: doc
-  only:
-    - master@tezos/tezos
-  before_script:
-    - sudo apk add --no-cache openssh-client rsync
-    - echo "${CI_PK_GITLAB_DOC}" > ~/.ssh/id_ed25519
-    - echo "${CI_KH}" > ~/.ssh/known_hosts
-    - chmod 400 ~/.ssh/id_ed25519
-  script:
-    - make doc-html
-    - git clone --depth 5 git@gitlab.com:${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAMESPACE}.gitlab.io gitlab.io
-    - rsync --recursive --links --perms --delete --verbose
-        --exclude=.doctrees --exclude={{main,alpha,zero}net,master}/index.html
-        docs/_build/ gitlab.io/public/
-    - cd gitlab.io
-    - if [ -z "$(git status -s)" ] ; then
-        echo "Nothing to commit!" ;
-      else
-        git add public ;
-        git commit -m "Import doc of ${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAME}:${CI_COMMIT_SHA}" ;
-        git push origin master ;
-      fi
-  interruptible: false
-
-# This job publishes the html report generated by the coverage job.
-# It is accessible on the gitlab page associated to the project
-# via URL $CI_PAGES_URL/$CI_PIPELINE_ID
-#
-# for instance https://nomadic-labs.gitlab.io/tezos/${CI_PIPELINE_ID}
-# https://tezos.gitlab.io/tezos/${CI_PIPELINE_ID}
-#
-# It is run manually from the Gitlab CI interface.
-#
-# Note that this job is somewhat redundant. It is already possible to browse
-# the html report artefact generated by the test_coverage job.
-#
-
-pages:
-  when: manual
-  # The cache rule ensures public (i.e. the static website) isn't erased
-  # whenever we start a new pipeline
-  # https://docs.gitlab.com/ee/ci/caching/
-  # The pages job retrieves the old public dir from the cache, adds a new
-  # report, and publishes the new public dir.
-  cache:
-    paths:
-      - public
-  stage: publish_coverage
-  except:
-    - tags@tezos/tezos
-    - /-release$/@tezos/tezos
-  dependencies:
-    - test_coverage
-  script:
-    - mkdir -p public
-    - mv _coverage_report public/$CI_PIPELINE_ID
-    - echo "Coverage report published at $CI_PAGES_URL/$CI_PIPELINE_ID"
-  artifacts:
-    paths:
-      - public
-    # This is the minimum time the public artifact will remain available.
-    # Everytime a pages job is launched, this time period is reset
-    expire_in: 7 days
-  interruptible: false
-
-############################################################
-## Stage: coverage                                        ##
-############################################################
-
-# This job is manual. It can be launched from the gitlab CI interface.
-# It instruments the code with bisect_ppx and runs the full test suite
-# (sequentially).
-
-test_coverage:
-  image: ${build_deps_image_name}:runtime-build-test-dependencies--${build_deps_image_version}
-  stage: test_coverage
-  except:
-    - tags@tezos/tezos
-    - /-release$/@tezos/tezos
-  when: manual
-  variables:
-    # We exclude from coverage old protocols and code that can't be
-    # instrumented because of current limitations of bisect_ppx.
-    OLD_PROTOCOLS: "src/proto_000_Ps9mPmXa src/proto_001_PtCJ7pwo src/proto_002_PsYLVpVv src/proto_003_PsddFKi3 src/proto_004_Pt24m4xi src/proto_005_PsBABY5H src/proto_005_PsBabyM1 src/proto_006_PsCARTHA"
-    NOT_INSTRUMENTABLE: "src/proto_007_PsDELPH1 src/proto_alpha"
-    COVERAGE_EXCLUDE: "$OLD_PROTOCOLS $NOT_INSTRUMENTABLE"
-  script:
-    - scripts/instrument_dune_bisect.sh src/ --except $COVERAGE_EXCLUDE
-    - make
-    # Load the environment poetry previously created in the docker image.
-    # Give access to the Python dependencies/executables
-    - . $HOME/.venv/bin/activate
-    # A failing test shouldn't prevent the generation of the report (|| true)
-    - make test-coverage || true
-    - make coverage-report
-    - make coverage-report-summary
-    # hack to capture script success in after_script script
-    - touch $CI_PROJECT_DIR/__success
-  after_script:
-    - |
-      if [ ! -f __success ]; then
-        echo "Job was unable to generate the coverage report."
-        echo "Check http://tezos.gitlab.io/developer/testing.html#measuring-test-coverage"
-        echo "for a list of known issues."
-      fi
-  # This is for gitlab to extract the coverage summary and display it
-  # to the user as a badge.
-  coverage: '/Coverage: \d+\/\d+ \(([^%]+%)\)/'
-  artifacts:
-    when: always
-    paths:
-      - _coverage_report/
-    expire_in: 15 days
