--- a/.gitlab/ci/sanity.yml
+++ b/.gitlab/ci/sanity.yml
@@ -1,11 +1,7 @@
 ---
 
-variables:
-  build_deps_image_version: 'undef'
-  build_deps_image_name: 'undef'
-
 sanity:
-  image: ${build_deps_image_name}:runtime-build-test-dependencies--${build_deps_image_version}
+  extends: .runtime_build_test_dependencies_template
   stage: sanity
   except:
     - tags@tezos/tezos
