--- a/.gitlab/ci/unittest.yml
+++ b/.gitlab/ci/unittest.yml
@@ -1,5 +1,5 @@
 test-script-gen-genesis:
-  image: ${build_deps_image_name}:runtime-build-test-dependencies--${build_deps_image_version}
+  extends: .runtime_build_test_dependencies_template
   stage: test
   except:
     - master
