--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,46 +33,8 @@ stages:
   - test_coverage
   - publish_coverage
 
-############################################################
-## Stage: sanity (fast self-checks)                       ##
-############################################################
-
-sanity:
-  image: ${build_deps_image_name}:runtime-build-test-dependencies--${build_deps_image_version}
-
-############################################################
-## Stage: build (only MR)                                 ##
-############################################################
-
-.build_template:
-  image: ${build_deps_image_name}:runtime-build-test-dependencies--${build_deps_image_version}
-
-############################################################
-## Stage: test (only MR)                                  ##
-############################################################
-
-test-script-gen-genesis:
-  image: ${build_deps_image_name}:runtime-build-test-dependencies--${build_deps_image_version}
-
-
-############################################################
-## Stage: run doc integration tests                       ##
-############################################################
-
-documentation:linkcheck:
-  image: ${build_deps_image_name}:runtime-build-test-dependencies--${build_deps_image_version}
-
-############################################################
-## Stage: building opam packages (only master and *opam*) ##
-############################################################
-
-.opam_template:
-  image: ${build_deps_image_name}:runtime-prebuild-dependencies--${build_deps_image_version}
-
-
-############################################################
-## Stage: publish                                         ##
-############################################################
-
-publish:doc:
+# we specify this template here that is used in all other
+# targets in the include files. Include files cannot refer
+# to variables defined here.
+.runtime_build_test_dependencies_template:
   image: ${build_deps_image_name}:runtime-build-test-dependencies--${build_deps_image_version}
