--- a/.gitlab/ci/build.yml
+++ b/.gitlab/ci/build.yml
@@ -1,5 +1,5 @@
 .build_template:
-  image: ${build_deps_image_name}:runtime-build-test-dependencies--${build_deps_image_version}
+  extends: .runtime_build_test_dependencies_template
   stage: build
   except:
     - master
