--- a/.gitlab/ci/publish.yml
+++ b/.gitlab/ci/publish.yml
@@ -96,7 +96,7 @@ publish:doc:
     - echo "${CI_KH}" > ~/.ssh/known_hosts
     - chmod 400 ~/.ssh/id_ed25519
   script:
-    - make doc-html
+    - make -C docs all
     - git clone --depth 5 git@gitlab.com:${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAMESPACE}.gitlab.io gitlab.io
     - rsync --recursive --links --perms --delete --verbose
         --exclude=.doctrees --exclude={{main,alpha,zero}net,master}/index.html
