--- a/.gitlab/ci/opam.yml
+++ b/.gitlab/ci/opam.yml
@@ -28,6 +28,37 @@
     - opam reinstall --yes --with-test ${package}
   interruptible: true
 
+############################################################
+## Stage: building static Tezos binaries                  ##
+############################################################
+
+static-x86-linux-binaries:
+  stage: packaging
+  image: .runtime_build_test_dependencies_template
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master"'
+      when: on_success
+    - if: '$CI_COMMIT_BRANCH =~ /-release$/'
+      when: on_success
+    - if: '$CI_COMMIT_TAG != null'
+      when: on_success
+  script:
+    - sudo apk --no-cache --virtual add unzip wget eudev-dev autoconf automake libtool linux-headers upx binutils
+    # TODO: include static version of this libraries to the default docker image
+    - packaging/build/build-libusb-and-hidapi.sh
+    # TODO: patch approach is very fragile, we should think about something
+    # more reliable
+    - git apply packaging/build/static_libs.patch
+    - dune build @install --profile release
+    - dune install --prefix install_root
+    # Strip debug symbols
+    - find . -maxdepth 1 -type f ! -name "*.*" -exec strip --strip-debug {} \;
+    # Compress resulting binaries
+    - find . -maxdepth 1 -type f ! -name "*.*" -exec upx {} \;
+  artifacts:
+    paths:
+      - install_root/bin/*
+
 ##BEGIN_OPAM##
 # this section is updated using the script scripts/update_opam_test.sh
 
