--- a/src/lib_sapling/dune
+++ b/src/lib_sapling/dune
@@ -9,9 +9,9 @@
  (libraries ctypes ctypes.foreign ctypes.stubs hex data-encoding tezos-crypto tezos-stdlib tezos-error-monad)
  (foreign_stubs
   (language c)
-  (flags (-I%{env:OPAM_SWITCH_PREFIX=}/include/librustzcash))
+  (flags (-I%{env:OPAM_SWITCH_PREFIX=}/lib/tezos-rust-libs))
   (names rustzcash_ctypes_c_stubs))
- (c_library_flags (-L%{env:OPAM_SWITCH_PREFIX=}/lib/librustzcash -lrustzcash -lpthread))
+ (c_library_flags (-L%{env:OPAM_SWITCH_PREFIX=}/lib/tezos-rust-libs -lrustzcash -lpthread))
  (flags (:standard -open Tezos_stdlib
                    -open Tezos_crypto
                    -open Tezos_error_monad)))
