DROP ME BEFORE MERGING

--- a/.gitlab/ci/publish.yml
+++ b/.gitlab/ci/publish.yml
@@ -72,6 +72,7 @@ release-static-binaries:
   image: registry.gitlab.com/gitlab-org/release-cli
   only:
     - tags@tezos/tezos
+    - tags@serokell/morley/tezos
   variables:
     PACKAGE_REGISTRY_URL: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/tezos/${CI_COMMIT_TAG}"
   stage: publish_release
