--- a/src/lib_stdlib/test/dune
+++ b/src/lib_stdlib/test/dune
@@ -1,7 +1,8 @@
 (executables
  (names test_tzList
         test_tzString
-        test_lwt_pipe)
+        test_lwt_pipe
+        test_circular_buffer)
  (libraries tezos-stdlib
             alcotest
             alcotest-lwt
@@ -30,11 +31,16 @@
  (action (run %{exe:test_lwt_pipe.exe})))
 
 (rule
+ (alias runtest_circular_buffer)
+ (action (run %{exe:test_circular_buffer.exe})))
+
+(rule
  (alias runtest)
  (package tezos-stdlib)
  (deps (alias runtest_tzList)
        (alias runtest_tzString)
-       (alias runtest_lwt_pipe))
+       (alias runtest_lwt_pipe)
+       (alias runtest_circular_buffer))
  (action (progn)))
 
 (rule
