CI: do not run the job sanity-ci on master
This job depends on the job `build`, which is not run on master.

--- a/.gitlab/ci/sanity.yml
+++ b/.gitlab/ci/sanity.yml
@@ -4,6 +4,7 @@ sanity:
   extends: .runtime_build_test_dependencies_template
   stage: sanity
   except:
+    - master
     - tags@tezos/tezos
     - /-release$/@tezos/tezos
   before_script:
