CI: actually do not run sanity_ci on master

--- a/.gitlab/ci/sanity_ci.yml
+++ b/.gitlab/ci/sanity_ci.yml
@@ -5,6 +5,7 @@ sanity_ci:
   extends: .runtime_build_test_dependencies_template
   stage: sanity_ci
   except:
+    - master
     - tags@tezos/tezos
     - /-release$/@tezos/tezos
   before_script:
