--- a/src/lib_stdlib/tezos-stdlib.opam
+++ b/src/lib_stdlib/tezos-stdlib.opam
@@ -16,6 +16,7 @@ depends: [
   "lwt_log" { with-test }
   "alcotest" { with-test & >= "1.1.0" }
   "alcotest-lwt" { with-test & >= "1.1.0" }
+  "crowbar" { with-test }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
