--- a/src/proto_008_PtEdoTez/lib_client_commands/dune
+++ b/src/proto_008_PtEdoTez/lib_client_commands/dune
@@ -11,7 +11,8 @@
             tezos-mockup-commands
             tezos-client-008-PtEdoTez
             tezos-client-commands
-            tezos-rpc)
+            tezos-rpc
+            tezos-filters-008-PtEdoTez)
  (library_flags (:standard -linkall))
  (modules (:standard \ alpha_commands_registration))
  (flags (:standard -open Tezos_base__TzPervasives
@@ -21,7 +22,8 @@
                    -open Tezos_client_base
                    -open Tezos_client_008_PtEdoTez
                    -open Tezos_client_commands
-                   -open Tezos_rpc)))
+                   -open Tezos_rpc
+                   -open Tezos_filters_008_PtEdoTez)))
 
 (library
  (name tezos_client_008_PtEdoTez_commands_registration)
@@ -35,7 +37,8 @@
             tezos-client-commands
             tezos-client-008-PtEdoTez-commands
             tezos-client-sapling-008-PtEdoTez
-            tezos-rpc)
+            tezos-rpc
+            tezos-filters-008-PtEdoTez)
  (library_flags (:standard -linkall))
  (modules alpha_commands_registration)
  (flags (:standard -open Tezos_base__TzPervasives
@@ -46,7 +49,8 @@
                    -open Tezos_client_commands
                    -open Tezos_client_008_PtEdoTez_commands
                    -open Tezos_client_sapling_008_PtEdoTez
-                   -open Tezos_rpc)))
+                   -open Tezos_rpc
+                   -open Tezos_filters_008_PtEdoTez)))
 
 (rule
  (alias runtest_lint)
