--- a/src/proto_008_PtEdoTez/lib_client/dune
+++ b/src/proto_008_PtEdoTez/lib_client/dune
@@ -7,6 +7,7 @@
             tezos-client-base
             tezos-mockup-registration
             tezos-rpc
+            tezos-filters-008-PtEdoTez
             tezos-signer-backends
             tezos-protocol-008-PtEdoTez-parameters)
  (library_flags (:standard -linkall))
@@ -15,7 +16,8 @@
                    -open Tezos_client_base
                    -open Tezos_protocol_008_PtEdoTez
                    -open Tezos_protocol_008_PtEdoTez_parameters
-                   -open Tezos_rpc)))
+                   -open Tezos_rpc
+                   -open Tezos_filters_008_PtEdoTez)))
 
 (rule
  (alias runtest_lint)
